hard-gists/c3c474a04d7c0cd8ddeb/run.log
=== Docker Run Log for c3c474a04d7c0cd8ddeb ===
Started at: Mi 29. Okt 19:52:48 CET 2025

[2025-10-29 19:52:48] START: Running container for c3c474a04d7c0cd8ddeb
[2025-10-29 19:52:49] SUCCESS: Container fab11b1b8b567c8f12d75139976d3c540c82898f56e8b0d56a2dcec28896851f started for c3c474a04d7c0cd8ddeb
=== Container logs for c3c474a04d7c0cd8ddeb ===
  File "/snippet.py", line 84
    print "Saving as", filename
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for c3c474a04d7c0cd8ddeb ===
[2025-10-29 19:52:51] INFO: Container fab11b1b8b567c8f12d75139976d3c540c82898f56e8b0d56a2dcec28896851f has stopped
